src/test/ui/missing_non_modrs_mod/missing_non_modrs_mod.stderr
error[E0583]: file not found for module `missing`
  --> $DIR/foo.rs:4:5
   |
LL | mod missing;
   |     ^^^^^^^
   |
   = help: to create the module `missing`, create file "$DIR/foo/missing.rs"

error: aborting due to previous error

For more information about this error, try `rustc --explain E0583`.
